<resources>

    <string name="app_name">MyBabySteps</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="btn_camRap">Cámara</string>
    <string name="btn_crear">Crear</string>
    <string name="btn_ver">Ver</string>
    <string name="btn_datos">Datos</string>
    <string name="btn_vacunas">Vacunas</string>
    <string name="btn_logros">Logros</string>
    <string name="btn_citas">Citas</string>
    <string name="btn_paseos">Paseos</string>
    <string name="btn_otros">Otros</string>
    <string name="title_activity_foto_rapida">Cámara</string>
    <string name="TomarFoto">Tomar Foto</string>
    <string name="title_activity_categorias">Categorias</string>

</resources>